--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
 
 <% posts.forEach(function(post){ %>
     <h2><%=post.title%></h2>
-    <p><%=post.body%></p>
+    <p><%=post.body.substring(0,100) + "..." %></p> <a href="/post/<%=post.title%>">Read More</a>
     <% }) %>
 
 
